# social-read

./: .gitignore  AGENTS.md  DOGFOODING.md  README.md  pyproject.toml
social_read/: __init__.py  browser.py  cli.py  extractors.py  markdown.py  models.py  playwriter_capture.js  urls.py
tests/: test_cli.py  test_markdown.py  test_models.py  test_playwriter_driver.py  test_urls.py
