[project]
name = "social-read"
version = "0.1.1"
description = "Playwriter-powered LinkedIn and X post reader for agents."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = ["agents", "linkedin", "playwriter", "social", "x"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Internet :: WWW/HTTP :: Browsers",
  "Topic :: Utilities",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.8",
]

[project.scripts]
social-read = "social_read.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["social_read"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
